change root path

--- a/EnglishMaster/Pages/Index.razor
+++ b/EnglishMaster/Pages/Index.razor
@@ -195,6 +195,6 @@
 
     private void ReturnTopButtonOnClick()
     {
-        navigationManager.NavigateTo("/", true);
+        navigationManager.NavigateTo("/EnglishMaster", true);
     }
 }
