単語に複数の意味があった場合、選択肢に両方表示され 片方しか正解にならないバグを修正

--- a/EnglishMaster/Pages/Index.razor
+++ b/EnglishMaster/Pages/Index.razor
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Mvc
 @using Microsoft.EntityFrameworkCore
 @using Models
+@using Extensions
 @inject DB db
 @inject NavigationManager navigationManager
 <PageTitle>Main</PageTitle>
@@ -151,9 +152,9 @@
     private List<string> CreateAnswer(Word word)
     {
         List<string> tmp = new List<string>();
-        tmp.Add(word.Vocabularies.First(a => a.PartOfSpeech.Name == PartOfSpeech).Meaning);
-        db.Vocabularies.Where(a => a.Meaning != word.Vocabularies.First().Meaning && a.PartOfSpeech.Name == PartOfSpeech).Select(a => new { a, o = Guid.NewGuid() }).OrderBy(a => a.o).Take(3).ToList().ForEach(a => tmp.Add(a.a.Meaning));
-        return tmp.Select(a => new { a, o = Guid.NewGuid() }).OrderBy(a => a.o).Select(a => a.a).ToList();
+        tmp.Add(word.Vocabularies.Where(a => a.PartOfSpeech.Name == PartOfSpeech).GetRandomFirstOrDefault().Meaning);
+        db.Vocabularies.Where(a => !word.Vocabularies.Select(b => b.Meaning).Contains(a.Meaning) && a.PartOfSpeech.Name == PartOfSpeech).CreateRandom().Take(3).ToList().ForEach(a => tmp.Add(a.Meaning));
+        return tmp.CreateRandom().ToList();
     }
 
     private void PartOfSpeechSpinnerSelectChanged(ChangeEventArgs e)
@@ -176,7 +177,7 @@
 
     public void AnswerButtonOnClick(string answer)
     {
-        IsValid = answer == Question.Word.Vocabularies.First(a => a.PartOfSpeech.Name == PartOfSpeech).Meaning;
+        IsValid = Question.Word.Vocabularies.Where(a => a.PartOfSpeech.Name == PartOfSpeech).Select(a => a.Meaning).Contains(answer);
     }
 
     private void NextButtonOnClick()
