--- a/EnglishMaster/Shared/NavMenu.razor
+++ b/EnglishMaster/Shared/NavMenu.razor
@@ -20,8 +20,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="timer">
+                <span class="oi oi-clock" aria-hidden="true"></span> Timer
             </NavLink>
         </div>
     </nav>
