Add session storage

--- a/EnglishMaster/Pages/Index.razor
+++ b/EnglishMaster/Pages/Index.razor
@@ -3,6 +3,9 @@
 @using Microsoft.EntityFrameworkCore
 @using Models
 @using Extensions
+@using Newtonsoft.Json
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedSessionStorage protectedSessionStore
 @inject DB db
 @inject NavigationManager navigationManager
 <PageTitle>Main</PageTitle>
@@ -103,6 +106,10 @@
                     <h4 class="alert-heading">Incorrect!</h4>
                 </div>
             }
+            @if (IsExamFinish)
+            {
+                <button type="button" class="btn-outline-primary form-control">結果を見る</button>
+            }
         }
     </div>
 </div>
@@ -126,6 +133,7 @@
     private bool IsExamFinish = false;
     private System.Timers.Timer Timer;
     private TimeSpan Time = TimeSpan.FromSeconds(10);
+    private Dictionary<long, bool> ResultList = new();
 
     protected override void OnInitialized()
     {
@@ -148,6 +156,7 @@
 
     public void Refresh()
     {
+        ResultList = new();
         IsValid = null;
         index = 0;
         PartOfSpeechList = db.PartOfSpeeches.ToList();
@@ -225,11 +234,13 @@
         Refresh();
     }
 
-    public void AnswerButtonOnClick(string answer)
+    public async Task AnswerButtonOnClick(string answer)
     {
         IsValid = Question.Word.Vocabularies.Where(a => a.PartOfSpeech.Name == PartOfSpeech).Select(a => a.Meaning).Contains(answer);
         if (Mode == "試験")
         {
+            ResultList.Add(Questions[index].Word.Id, IsValid.Value);
+            await protectedSessionStore.SetAsync("Result", JsonConvert.SerializeObject(ResultList));
             IsValid = true;
             NextButtonOnClick();
         }
@@ -259,5 +270,10 @@
         IsStart = true;
         Timer.Start();
         Timer.Enabled = true;
+    }
+
+    private void GoExamResult()
+    {
+        navigationManager.NavigateTo("/Result");
     }
 }
