一時的に結果が見れるように画面を作成

--- a/EnglishMaster/Pages/Index.razor
+++ b/EnglishMaster/Pages/Index.razor
@@ -108,7 +108,7 @@
             }
             @if (IsExamFinish)
             {
-                <button type="button" class="btn-outline-primary form-control">結果を見る</button>
+                <button type="button" class="btn-outline-primary form-control" @onclick="GoExamResult">結果を見る</button>
             }
         }
     </div>
