--- a/EnglishMaster/Pages/Index.razor
+++ b/EnglishMaster/Pages/Index.razor
@@ -67,7 +67,7 @@
         }
         else
         {
-            @if (!IsStart && Mode != "試験")
+            @if (IsStart || Mode != "試験")
             {
                 <p class="text-center h1 card p-3">@Question.Word.Word1</p>
                 <p class="text-center text-info">@(Questions.Count == 0 ? 0 : index + 1) of @Questions.Count</p>
