相対パスに変更

--- a/EnglishMaster/Pages/Index.razor
+++ b/EnglishMaster/Pages/Index.razor
@@ -285,6 +285,6 @@
 
     private void GoExamResult()
     {
-        navigationManager.NavigateTo("/Result");
+        navigationManager.NavigateTo("./Result");
     }
 }
